--- a/GAStutor/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GAStutor/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -188,6 +188,7 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Classes_Game
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Classes_Game/GAStutor
 AssetPropertyPicker.ThumbnailSize=2
@@ -1804,7 +1805,7 @@ StaticMeshActor.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-DebuggerAttached=True
+DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
